Fixed issue: #10757: Wrong color in the mapping interface
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/templavoila/trunk@35375 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/cm1/styles.css
+++ b/cm1/styles.css
@@ -38,7 +38,6 @@ ul.DS-tree a {
 	position: relative;
 	left: -2px;
 	top: -4px;
-	color: #c7220c;
 }
 
 ul.DS-tree a.active {
